@@ -34,7 +34,7 @@ cmd = "python src/wajig.py -v commands"
 with subprocess.Popen(cmd, shell=True, stdout=subprocess.PIPE).stdout as f:
     for line in f:
         line = line.strip()
-        if not line or (":" in line):
+        if not line or (":" in line) or ("/dist" in line):
             continue
         if line.startswith('-'):
             mo = option_patt_r.search(line)
@@ -57,7 +57,7 @@ with subprocess.Popen(cmd, shell=True, stdout=subprocess.PIPE).stdout as f:
             if mo == None:
                 continue
             cmd = mo.group(1)
-            if len(c_str[c_i]) > 40:
+            if len(c_str[c_i]) > 50:
                 c_str[c_i] = "{0} {1}".format(c_str[c_i], '\\ \n')
                 c_str.append('')
                 c_i += 1
